chore(bus): WIP